@@ -76,7 +76,8 @@ RESET_CIA()
     userport_printer_write_data(0xff);
 #endif
 #ifdef HAVE_RS232
-    userport_serial_write_ctrl(0xff);
+    rsuser_write_ctrl(0xff);
+    rsuser_set_tx_bit(1);
 #endif
     iec_info = iec_get_drive_port();
 }
@@ -136,7 +137,7 @@ STORE_CIAPB()
     userport_printer_write_data(byte);
 #endif
 #ifdef HAVE_RS232
-    userport_serial_write_ctrl(byte);
+    rsuser_write_ctrl(byte);
 #endif
 }
 
@@ -158,7 +159,7 @@ READ_CIAPB()
     byte = (drive_parallel_cable_enabled
             ? parallel_cable_cpu_read()
             : (rsuser_enabled
-		? userport_serial_read_ctrl()
+		? rsuser_read_ctrl()
 		: 0xff ));
 #else
     byte = (drive_parallel_cable_enabled
